[project]
name = "py-es3"
description = "A Python library for interacting with EasySave3 files."
authors = [{ name = "Alex Nørgaard", email = "umbra@abstractumbra.dev" }]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = ["pycryptodome>=3.23.0,<4"]
license = "AGPL-3.0-or-later"
license-files = ["LICEN[CS]E"]
keywords = ["easysave3", "es3", "save", "save-editor"]
classifiers = [
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Games/Entertainment",
    "Typing :: Typed",
]
dynamic = ["version"]

[project.urls]
"Issue Tracker" = "https://github.com/AbstractUmbra/py-es3/issues"
Discord = "https://discord.gg/aYGYJxwqe5"
Repository = "https://github.com/AbstractUmbra/py-es3"

[dependency-groups]
dev = ["pytest", "ruff"]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
# direct dependency references, e.g `pip @ git+https://github.com/pypa/pip.git@master`
allow-direct-references = true

[tool.hatch.version]
path = "py_es3/__init__.py"

[tool.hatch.build.targets.sdist]
include = ["py_es3", "README.md", "LICENSE"]
skip-excluded-dirs = false

[tool.hatch.build.targets.wheel]
packages = ["./py_es3"]

[[tool.uv.index]]
name = "umbra"
url = "https://about.abstractumbra.dev/pip/"
explicit = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 125
target-version = "py310"

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    "ANN401",
    "ASYNC240", # i dont like trio/anyio
    "C901",
    "COM812",
    "CPY001",
    "D",        # not needed here
    "DOC",
    "EM101",    # in this case this is okay
    "F401",
    "F402",
    "F403",
    "F405",
    "INP001",   # due to how I load modules this results in annoyances
    "PD011",    # this is not a numpy codebase
    "PERF203",
    "PLC0414",  # pyright ruling for `as` imports needed
    "PLR0912",
    "PLR0913",
    "PLR2004",  # I hate this rule
    "PLR6301",
    "Q000",
    "RUF001",
    "RUF009",
    "S101",     # assert is used for type checking in this codebase
    "SLF001",
    "SIM105",
    "TRY003",   # over-eager rule
    "TRY301",   # unrealistic rule
    "UP034",
]
unfixable = [
    "E501", # line length handled in other ways by ruff format
    "ERA",  # Don't delete commented out code
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
split-on-trailing-comma = true
combine-as-imports = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false
parametrize-names-type = "csv"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.ruff.lint.flake8-tidy-imports.banned-api]
# https://discuss.python.org/t/problems-with-typeis/55410/6
# https://discuss.python.org/t/problems-with-typeis/55410/46
# Until what can go into a TypeIs/TypeGuard changes, these are just dangerous.
"typing.TypeIs".msg = "TypeIs is fundamentally unsafe, even when using it as described to be safe"
"typing.TypeGuard".msg = "TypeGuard is fundamentally unsafe"
"typing_extensions.TypeIs".msg = "TypeIs is fundamentally unsafe, even when using it as described to be safe"
"typing_extensions.TypeGuard".msg = "TypeGuard is fundamentally unsafe"

[tool.pyright]
useLibraryCodeForTypes = true
typeCheckingMode = "strict"
pythonVersion = "3.10"
include = ["py_es3/**/*.py", "examples/**/*.py"]
